@@ -2,19 +2,11 @@ package dev.hilla.parser.plugins.backbone;
 
 import static io.swagger.v3.oas.models.Components.COMPONENTS_SCHEMAS_REF;
 
-import java.util.Collections;
-import java.util.Objects;
+import java.util.ArrayList;
+import java.util.List;
 
-import javax.annotation.Nonnull;
-
-import dev.hilla.parser.core.SharedStorage;
-import dev.hilla.parser.core.SignatureInfo;
-import dev.hilla.parser.models.ArraySignatureModel;
 import dev.hilla.parser.models.ClassRefSignatureModel;
 import dev.hilla.parser.models.SignatureModel;
-import dev.hilla.parser.models.TypeArgumentModel;
-import dev.hilla.parser.models.TypeParameterModel;
-import dev.hilla.parser.models.TypeVariableModel;
 
 import io.swagger.v3.oas.models.media.ArraySchema;
 import io.swagger.v3.oas.models.media.BooleanSchema;
@@ -29,20 +21,10 @@ import io.swagger.v3.oas.models.media.Schema;
 import io.swagger.v3.oas.models.media.StringSchema;
 
 final class SchemaProcessor {
-    private static final Schema<?> anySchemaSample = new ObjectSchema();
-    private final SignatureInfo info;
-    private final SharedStorage storage;
     private final SignatureModel type;
 
-    public SchemaProcessor(@Nonnull SignatureModel type,
-            @Nonnull SignatureInfo info, @Nonnull SharedStorage storage) {
-        this.storage = Objects.requireNonNull(storage);
-        this.info = Objects.requireNonNull(info);
-        this.type = Objects
-                .requireNonNull(type) instanceof ClassRefSignatureModel
-                        ? storage.getClassMappers()
-                                .map((ClassRefSignatureModel) type)
-                        : type;
+    public SchemaProcessor(SignatureModel type) {
+        this.type = type;
     }
 
     private static <T extends Schema<?>> T nullify(T schema,
@@ -67,25 +49,15 @@ final class SchemaProcessor {
             result = iterableSchema();
         } else if (type.isMap()) {
             result = mapSchema();
-        } else if (type.isOptional()) {
-            result = optionalSchema();
-        } else if (type.isTypeArgument()) {
-            result = typeArgumentSchema();
-        } else if (type.isTypeParameter()) {
-            result = typeParameterSchema();
         } else if (type.isDate()) {
             result = dateSchema();
         } else if (type.isDateTime()) {
             result = dateTimeSchema();
         } else if (type.isClassRef()) {
             result = refSchema();
-        } else if (type.isTypeVariable()) {
-            result = typeVariableSchema();
         } else {
             result = anySchema();
         }
-
-        storage.getAssociationMap().addSignature(result, type, info);
 
         return result;
     }
@@ -95,10 +67,7 @@ final class SchemaProcessor {
     }
 
     private Schema<?> arraySchema() {
-        var nestedType = ((ArraySignatureModel) type).getNestedType();
-        var items = new SchemaProcessor(nestedType, info, storage).process();
-
-        return nullify(new ArraySchema().items(items), true);
+        return nullify(new ArraySchema(), true);
     }
 
     private Schema<?> booleanSchema() {
@@ -121,13 +90,6 @@ final class SchemaProcessor {
     private Schema<?> iterableSchema() {
         var schema = nullify(new ArraySchema(), true);
         var _type = (ClassRefSignatureModel) type;
-        var typeArguments = _type.getTypeArguments();
-
-        if (!typeArguments.isEmpty()) {
-            schema = schema.items(
-                    new SchemaProcessor(typeArguments.get(0), info, storage)
-                            .process());
-        }
 
         if (type.isNonJDKClass()) {
             schema.addExtension("x-class-name", _type.getName());
@@ -137,17 +99,13 @@ final class SchemaProcessor {
     }
 
     private Schema<?> mapSchema() {
-        var schema = nullify(new MapSchema(), true);
-
         var _type = (ClassRefSignatureModel) type;
-        var typeArguments = _type.getTypeArguments();
 
         // For the TS generator, to recognize a schema as a map, it requires
-        // "additionalProperties" to be set
-        schema.additionalProperties(!typeArguments.isEmpty()
-                ? new SchemaProcessor(typeArguments.get(1), info, storage)
-                        .process()
-                : anySchema());
+        // "additionalProperties" to be set. The default "any" option could be
+        // updated later.
+        var schema = nullify(new MapSchema(), true)
+                .additionalProperties(anySchema());
 
         if (type.isNonJDKClass()) {
             schema.addExtension("x-class-name", _type.getName());
@@ -161,16 +119,6 @@ final class SchemaProcessor {
                 .format(type.isFloat() ? "float" : "double");
     }
 
-    private Schema<?> optionalSchema() {
-        var _type = (ClassRefSignatureModel) type;
-        var typeArguments = _type.getTypeArguments();
-
-        return !typeArguments.isEmpty()
-                ? new SchemaProcessor(typeArguments.get(0), info, storage)
-                        .process()
-                : anySchema();
-    }
-
     private Schema<?> refSchema() {
         if (type.isJDKClass()) {
             return anySchema();
@@ -180,35 +128,11 @@ final class SchemaProcessor {
         var fullyQualifiedName = _type.getClassInfo().getName();
 
         return nullify(new ComposedSchema(), true)
-                .anyOf(Collections.singletonList(new Schema<>()
-                        .$ref(COMPONENTS_SCHEMAS_REF + fullyQualifiedName)));
+                .anyOf(new ArrayList<>(List.of(new Schema<>()
+                        .$ref(COMPONENTS_SCHEMAS_REF + fullyQualifiedName))));
     }
 
     private Schema<?> stringSchema() {
         return nullify(new StringSchema(), !type.isPrimitive());
-    }
-
-    private Schema<?> typeArgumentSchema() {
-        var types = ((TypeArgumentModel) type).getAssociatedTypes();
-
-        return !types.isEmpty()
-                ? new SchemaProcessor(types.get(0), info, storage).process()
-                : anySchema();
-    }
-
-    private Schema<?> typeParameterSchema() {
-        return ((TypeParameterModel) type).getBounds().stream()
-                .filter(Objects::nonNull)
-                .filter(bound -> !bound.isNativeObject())
-                .<Schema<?>> map(
-                        bound -> new SchemaProcessor(bound, info, storage)
-                                .process())
-                .filter(schema -> !Objects.equals(schema, anySchemaSample))
-                .findFirst().orElseGet(this::anySchema);
-    }
-
-    private Schema<?> typeVariableSchema() {
-        return new SchemaProcessor(((TypeVariableModel) type).resolve(), info,
-                storage).process();
     }
 }
